# Medulla

./: .gitignore  AUDIO_EXAMPLES.py  docker-compose.yml  pyproject.toml
docs/: doc.md
notebook/: notebook.md
src/: main.py
src/adapters/input/: ffmpeg_extractor.py  kafka_listener.py  opencv_extractor.py
src/adapters/output/: console_publisher.py  deepseek_adapter.py  gemini_llm_adapter.py  kafka_publisher.py  kafkapublisher.py
src/application/prompts/: frame_analysis_prompt.py
src/application/services/: decision_engine.py  extract_frames_usecase.py  frame_analysis_service.py  orchestration_service.py  video_analysis.py  video_ingestion.py
src/core/: llm_config.py
src/domain/models/: analysis.py  ingestion.py  output.py  rule_context.py  verdict.py
src/experiments/: __init__.py  run_local_audio_extraction.py  run_local_extraction.py
src/ports/input/: extract_frames_usecase_port.py  message_consumer.py
src/ports/output/: LlmPort.py  frame_extractor_port.py  frame_publisher_port.py  llm_port.py  message_publisher.py
src/tests/: run_local_extraction.py
src/utils/: audio_helper.py  ffmpeg_helper.py  image_loader.py
