[project]
name = "medulla"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiokafka>=0.14.0",
    "colorlog>=6.10.1",
    "fastapi>=0.136.1",
    "ffmpeg-python>=0.2.0",
    "opencv-python>=4.13.0.92",
    "pillow>=10.0.0",
    "pydantic>=2.13.4",
    "strawberry-graphql[fastapi]>=0.315.4",
    "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]
