[project]
name = "medulla"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiokafka>=0.14.0",
    "colorlog>=6.10.1",
    "confluent-kafka>=2.14.0",
    "fastapi>=0.136.1",
    "ffmpeg-python>=0.2.0",
    "opencv-python>=4.13.0.92",
    "pillow>=10.0.0",
    "dotenv>=0.9.9",
    "fastapi>=0.136.1",
    "google-genai>=2.2.0",
    "google-generativeai>=0.8.6",
    "pydantic>=2.13.4",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "strawberry-graphql[fastapi]>=0.315.4",
    "uvicorn>=0.46.0",
    "pydantic-settings>=2.14.1",
    "librosa>=0.11.0",
    "matplotlib>=3.10.9",
    "soundfile>=0.13.1",
    "scipy>=1.17.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]
